--- a/styles.css
+++ b/styles.css
@@ -146,10 +146,15 @@ body:not(.dark-mode) #dark-mode-toggle {
     }
 }
 
-button{
+.buttonc{
     color: white;
-    background-color: rgb(21, 238, 238);
+    background-color: rgb(0, 207, 207);
     border: none;
-    width: 30%;
-    height: 30%;
+    width: 80px;
+    height: 50px;   
+}
+
+a{
+    text-decoration: none;
+    color:white;
 }
