--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ body:not(.dark-mode) #dark-mode-toggle {
 
 .buttonc{
     color: white;
-    background-color: rgb(0, 207, 207);
+    background-color: #333;
     border: none;
     width: 80px;
     height: 50px;   
